--- a/index.html
+++ b/index.html
@@ -68,18 +68,36 @@
       </div>
       </div>
       
-        <!--new prodact section-->
-        <div>
-               <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img src="Images/5.png" alt="Movie"/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">New movie is released!</h2>
-                      <p>Click the button to watch on Jetflix app.</p>
-                      <div class="card-actions justify-end">
-                      </div>
-                    </div>
-                  </div>
+        <!--Professional Hockeys Club-->
+        <div class="my-4">
+          <div class="border-dotted text-center">
+            <h3 class="text-3xl font-semibold mb-2">Professional Hockeys Club</h3>
+            <p > If you're looking for information on a general professional hockey club, I can provide a generic overview.</p>
+          </div>
+          <div class="md:grid grid-cols-4 gap-2 mt-4">
+            <div class="p-4 text-center">
+              <div class="radial-progress text-error" style="--value:87;" role="progressbar">87%</div>
+              <h5 class="text-xl font-semibold my-3">Prayer Facility</h5>
+              <p> In certain public spaces, such as shopping malls or community centers.</p>
+            </div>
+            <div class="p-4 text-center">
+              <div class="radial-progress text-green-500" style="--value:95;" role="progressbar">95%</div>
+              <h5 class="text-xl font-semibold my-3">Experienced Coach</h5>
+              <p> In certain public spaces, such as shopping malls or community centers.</p>
+            </div>
+            <div class="p-4 text-center">
+              <div class="radial-progress text-yellow-500" style="--value:90;" role="progressbar">90%</div>
+              <h5 class="text-xl font-semibold my-3">Senior Player</h5>
+              <p> In certain public spaces, such as shopping malls or community centers.</p>
+            </div>
+            <div class="p-4 text-center">
+              <div class="radial-progress text-blue-500" style="--value:80;" role="progressbar">80%</div>
+              <h5 class="text-xl font-semibold my-3">Training Ground</h5>
+              <p> In certain public spaces, such as shopping malls or community centers.</p>
+            </div>
+          </div>
         </div>
+        
     </main>
     <!--footer section start-->
     <footer class="footer p-10 bg-neutral text-neutral-content">
