--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
 
         <!--Our New Products-->
-        <div>
+        <div class="py-4">
           <div class="text-center">
             <h3 class="text-3xl font-semibold mb-2">Our New Products</h3>
             <p > If you're looking for information on a general professional hockey club, I can provide a generic overview.</p>
